➕ Agregar logo PNG estático
- Agregado logo.png al header (50px de altura)
- Posicionado al lado del texto 'Codigo Raiz'
- Efecto hover con escala suave
- Espaciado consistente con gap

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="container">
             <div class="nav-container">
                 <div class="logo">
+                    <img src="logo.png" alt="Codigo Raiz" class="logo-img">
                     <div class="logo-text">Codigo <span>Raiz</span></div>
                 </div>
                 <ul class="nav-links">
