✨ Convertir fantasma en pantalla de carga (loading screen)
CAMBIOS:
- Fantasma ahora es una pantalla de carga completa
- Aparece al cargar la página por 2 segundos
- Fondo con degradado púrpura-violeta-rosa (tipo GitHub)
- Fantasma con animación flotante suave
- Texto 'CARGANDO' pulsante
- Desaparece suavemente con fade-out
- JavaScript: se oculta automáticamente después de 2 segundos

CARACTERÍSTICAS:
✨ Animación float suave (3s)
✨ Animación pulse en texto (1.5s)
✨ Fade-out smooth de 0.8s
✨ Z-index 9999 (encima de todo)
✨ Degradado profesional de fondo

--- a/index.html
+++ b/index.html
@@ -18,18 +18,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Fantasma - Elemento decorativo -->
-    <svg class="ghost-decorative" viewBox="0 0 127.433 132.743" xmlns="http://www.w3.org/2000/svg">
-        <g id="Capa_2" data-name="Capa 2">
-            <g id="Capa_1-2" data-name="Capa 1">
-                <path d="M63.7164,0C35.5164,0,12.5,23.016,12.5,51.216v60.1c0,11.6,9.416,21,21.016,21h60.4c11.6,0,21.016-9.4,21.016-21v-60.1C114.932,23.016,91.9164,0,63.7164,0Z" fill="#3498db"/>
-                <circle cx="44.8335" cy="42.5328" r="7.5" fill="#2c3e50"/>
-                <circle cx="82.6" cy="42.5328" r="7.5" fill="#2c3e50"/>
-                <circle cx="30.3335" cy="75.0328" r="5" fill="#5dade2"/>
-                <circle cx="97.1" cy="75.0328" r="5" fill="#5dade2"/>
-            </g>
-        </g>
-    </svg>
+    <!-- Pantalla de Carga con Fantasma -->
+    <div class="loading-screen" id="loadingScreen">
+        <div class="loading-content">
+            <svg class="ghost-loading" viewBox="0 0 127.433 132.743" xmlns="http://www.w3.org/2000/svg">
+                <g id="Capa_2" data-name="Capa 2">
+                    <g id="Capa_1-2" data-name="Capa 1">
+                        <path d="M63.7164,0C35.5164,0,12.5,23.016,12.5,51.216v60.1c0,11.6,9.416,21,21.016,21h60.4c11.6,0,21.016-9.4,21.016-21v-60.1C114.932,23.016,91.9164,0,63.7164,0Z" fill="#3498db"/>
+                        <circle cx="44.8335" cy="42.5328" r="7.5" fill="#2c3e50"/>
+                        <circle cx="82.6" cy="42.5328" r="7.5" fill="#2c3e50"/>
+                        <circle cx="30.3335" cy="75.0328" r="5" fill="#5dade2"/>
+                        <circle cx="97.1" cy="75.0328" r="5" fill="#5dade2"/>
+                    </g>
+                </g>
+            </svg>
+            <p class="loading-text">CARGANDO</p>
+        </div>
+    </div>
 
     <!-- Header -->
     <header>
